samples/_failures_safe/1761258248_5fbff0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0227404a.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_0227404a.c:164:9: error: expected declaration or statement at end of input
  164 |         result->data[i] = malloc(result->cols * sizeof(int));
      |         ^~~~~~
./samples/SAFE/__tmp_0227404a.c:164:9: error: expected declaration or statement at end of input
